@@ -1,70 +1,108 @@
-maven Cookbook
-==============
-Install and configure maven2 and maven3 from the binaries provided by the maven project.
+# maven Cookbook
 
-Provides the `maven` LWRP for pulling a maven artifact from a mave repository and placing it in an arbitrary location.
+[![Build Status](https://travis-ci.org/chef-cookbooks/maven.svg?branch=master)](http://travis-ci.org/chef-cookbooks/maven) [![Cookbook Version](https://img.shields.io/cookbook/v/maven.svg)](https://supermarket.chef.io/cookbooks/maven)
 
+Install and configure Apache Maven from the binaries provided by the Maven project.
 
-Requirements
-------------
+Provides the `maven` LWRP for pulling a maven artifact from a maven repository and placing it in an arbitrary location.
+
+Note: This cookbook does not handle the installation of Java but does require it to be installed. This can be done either using the [Java cookbook](https://supermarket.chef.io/cookbooks/java) or your own cookbook. Check the [Maven website](https://maven.apache.org/docs/history.html) for more information about explicit Java requirements.
+
+## Requirements
+
 ### Platforms
-- Debian
-- Ubuntu
-- CentOS
-- Red Hat
+
+- Debian/Ubuntu
+- RHEL/CentOS/Scientific/Amazon/Oracle
 - Fedora
 - Windows
 
-The following Chef Software cookbooks are dependencies:
-- java - this cookbook not only depends on the java virtual machine but it also depends on the java_ark LWRP present in the java cookbooks
+### Chef
+
+- Chef 12.5+
+
+### Cookbooks
+
+- java - java_ark custom resource used by the Maven LWRP
 - ark - used to unpack the maven tarball
 
+## Attributes
 
-Attributes
-----------
-* `node['maven']['version']` - defaults to 3, specifies the major version of maven to install.
-* `node['maven']['m2_home']` - defaults to  '/usr/local/maven/'
-* `node['maven']['2']['url']` - the download url for maven2
-* `node['maven']['2']['checksum']` - the checksum, which you will have to recalculate if you change the download url using shasum -a 256 <file>
-* `node['maven']['3']['url']` - download url for maven3
-* `node['maven']['3']['checksum']` - the checksum, which you will have to recalculate if you change the download url using shasum -a 256 <file>
-* `node['maven']['repositories']` - an array of maven repositories to use; must be specified as an array. Used in the maven LWRP.
-* `node['maven']['setup_bin']` - Whether or not to put mvn on your system path, defaults to false
-* `node['maven']['mavenrc']['opts']` - Value of `MAVEN_OPTS` environment variable exported via `/etc/mavenrc` template, defaults to `-Dmaven.repo.local=$HOME/.m2/repository -Xmx384m -XX:MaxPermSize=192m`
-* `node['maven']['install_java']` - Whether or not to use the Java community cookbook to install Java. Defaults to `true`.
+- `node['maven']['version']` - specifies the version of maven to install.
+- `node['maven']['m2_home']` - defaults to '/usr/local/maven/'
+- `node['maven']['url']` - the download url for maven
+- `node['maven']['checksum']` - the checksum, which you will have to recalculate if you change the download url using `shasum -a 256 FILENAME`
+- `node['maven']['repositories']` - an array of maven repositories to use; must be specified as an array. Used in the maven LWRP.
+- `node['maven']['setup_bin']` - whether or not to put mvn on your system path, defaults to false
+- `node['maven']['mavenrc']['opts']` - value of `MAVEN_OPTS` environment variable exported via `/etc/mavenrc` template, defaults to `-Dmaven.repo.local=$HOME/.m2/repository -Xmx384m`
 
+## Recipes
 
-Recipes
--------
 ### default
-Includes the java recipe, and then installs maven according to the version specified by the `node['maven']['version']` attribute.
 
-### test
-**For testing only**. From the development repository, use test-kitchen to test that the LWRP is operating with this recipe. Also contains example usage of the LWRP.
+Installs maven according to the version specified by the `node['maven']['version']` attribute.
 
+### settings
 
-Usage
------
-Simply include the recipe where you want Apache Maven installed.
+Installs gems required to parse settings.xml to ruby and hash and back to xml
+
+## Usage
+
+Install a version of Java JRE (Oracle or OpenJDK) that is at minimum the version of Java required by the [maven release you are installing](https://maven.apache.org/docs/history.html). This can be done either using the [Java cookbook](https://supermarket.chef.io/cookbooks/java) or your own cookbook.
+
+Include the recipe where you want Apache Maven installed.
 
 The maven lwrp has two actions, `:install` and `:put`. They are essentially the same accept that the install action will name the the downloaded file `artifact_id-version.packaging`. For example, the mysql jar would be named mysql-5.1.19.jar.
 
 Use the put action when you want to explicitly control the name of the downloaded file. This is useful when you download an artifact and then want to have Chef resources act on files within that the artifact. The put action will creat a file named `name.packaging` where name corresponds to the name attribute.
 
+## Providers/Resources
 
-Providers/Resources
--------------------
+## maven_settings
+
+Resource provider for modifying the maven settings.
+
+### Actions
+
+Action | Description                                    | Default
+------ | ---------------------------------------------- | -------
+update | Updates a global maven setting to a new value. | Yes
+
+### Attributes
+
+Attribute | Description                                                                       | Type                                | Default
+--------- | --------------------------------------------------------------------------------- | ----------------------------------- | -------
+path      | Period '.' delimited path to element of the settings that is going to be changed. | String                              | name
+value     | The new value to update the path to.                                              | String, TrueClass, FalseClass, Hash |
+
+In order to use this resource you first need to run `settings` recipe which will installed required bury gems for you. Find below exampl on how to update proxy in settings.xml
+
+```ruby
+maven_settings "settings.proxies" do
+  value "proxy" => {
+    "active" => true,
+    "protocaol" => "http",
+    "host" => "proxy.myorg.com",
+    "port" => 80,
+    "nonProxyHosts" => ".myorg.com"
+  }
+end
+```
+
 ### maven
+
 - `artifact_id` - if this is not specified, the resource's name is used
 - `group_id` - group_id for the artifact
 - `version` - version of the artifact
 - `dest` - the destination folder for the jar and its dependencies
 - `packaging` - defaults to 'jar'
 - `classifier` - distinguishes artifacts that were built from the same POM but differ in context
-- `repositories` - array of maven repositories to use, defaults to ["http://repo1.maven.apache.org/maven2"]
+- `repositories` - array of maven repositories to use, defaults to ["<http://repo1.maven.apache.org/maven2>"]
 - `owner` - the owner of the resulting file, default is root
+- `group` - the group of the resulting file, default is root's group
 - `mode` - integer value for file permissions, default is 0644
 - `transitive` - whether to resolve dependencies transitively, defaults to false. Please note: Event true will only place one artifact in dest. All others are downloaded to the local repository.
+- `timeout` - sets the timeout (in seconds) of file download, default is 600
 
 #### Examples
 
@@ -95,16 +133,17 @@ end
 # The artifact will be downloaded to /usr/local/tomcat/lib/custom-application-2.0.0-client.jar
 ```
 
+## License & Authors
 
-License & Authors
------------------
-- Author:: Seth Chisamore (<schisamo@chef.io>)
-- Author:: Bryan W. Berry (<bryan.berry@gmail.com>)
-- Author:: Leif Madsen (<lmadsen@thinkingphones.com>)
+**Author:** Seth Chisamore ([schisamo@chef.io](mailto:schisamo@chef.io))
 
-```text
-Copyright 2010-2013, Chef Software, Inc.
+**Author:** Bryan W. Berry ([bryan.berry@gmail.com](mailto:bryan.berry@gmail.com))
 
+**Author:** Leif Madsen ([lmadsen@thinkingphones.com](mailto:lmadsen@thinkingphones.com))
+
+**Copyright:** 2008-2017, Chef Software, Inc.
+
+```
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
